fixed if `addboost` is called twice

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.14...3.22)
 # Note: update this to your new project's name and version
 project(
   AddBoost.cmake
-  VERSION 3.2
+  VERSION 3.3
   LANGUAGES CXX
 )
 
@@ -13,7 +13,8 @@ function(SUBDIRLIST result_var curdir)
   file(
     GLOB children
     RELATIVE ${curdir}
-    ${curdir}/*)
+    ${curdir}/*
+  )
   set(result "")
   foreach(child ${children})
     if(IS_DIRECTORY ${curdir}/${child})
@@ -22,18 +23,21 @@ function(SUBDIRLIST result_var curdir)
   endforeach()
   set(${result_var}
       ${result}
-      PARENT_SCOPE)
+      PARENT_SCOPE
+  )
 endfunction()
 
 macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
-      BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED)
+      BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
+)
   message(
     DEBUG
     "add_boost called with next arguments:
     \$\{\$\{TRY_BOOST_VERSION\}\} : ${${TRY_BOOST_VERSION}}
     \$\{\$\{BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED\}\} : ${${BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}
     \$\{\$\{BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED\}\} : ${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}
-  ")
+  "
+  )
   set(targets_to_link_to "${ARGN}")
   message(DEBUG "targets_to_link_to: \"${targets_to_link_to}\"")
   set(BOOST_INCLUDE_LIBRARIES
@@ -56,11 +60,13 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
   set(patches_for_boost "")
 
   file(GLOB global_patches_for_boost CONFIGURE_DEPENDS
-       "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/*.patch")
+       "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/*.patch"
+  )
   list(APPEND patches_for_boost ${global_patches_for_boost})
   if(DEFINED BOOST_ADD_MY_PATCHES)
     file(GLOB global_patches_for_boost CONFIGURE_DEPENDS
-         "${BOOST_ADD_MY_PATCHES}/patches/boost/*.patch")
+         "${BOOST_ADD_MY_PATCHES}/patches/boost/*.patch"
+    )
     list(APPEND patches_for_boost ${global_patches_for_boost})
 
   endif()
@@ -69,11 +75,10 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
   if(subdirs_boost_patches)
     foreach(subdir ${subdirs_boost_patches})
       if(${subdir} STREQUAL ${${TRY_BOOST_VERSION}})
-        file(GLOB_RECURSE patches_with_max_applicable_version_up_to
-             CONFIGURE_DEPENDS
-             "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/${subdir}/*.patch")
-        list(APPEND patches_for_boost
-             ${patches_with_max_applicable_version_up_to})
+        file(GLOB_RECURSE patches_with_max_applicable_version_up_to CONFIGURE_DEPENDS
+             "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/${subdir}/*.patch"
+        )
+        list(APPEND patches_for_boost ${patches_with_max_applicable_version_up_to})
       endif()
     endforeach()
   endif()
@@ -82,80 +87,56 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
     if(subdirs_boost_patches)
       foreach(subdir ${subdirs_boost_patches})
         if(${subdir} STREQUAL ${${TRY_BOOST_VERSION}})
-          file(GLOB_RECURSE patches_with_max_applicable_version_up_to
-               CONFIGURE_DEPENDS
-               "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/${subdir}/*.patch")
-          list(APPEND patches_for_boost
-               ${patches_with_max_applicable_version_up_to})
+          file(GLOB_RECURSE patches_with_max_applicable_version_up_to CONFIGURE_DEPENDS
+               "${CMAKE_CURRENT_SOURCE_DIR}/patches/boost/${subdir}/*.patch"
+          )
+          list(APPEND patches_for_boost ${patches_with_max_applicable_version_up_to})
         endif()
       endforeach()
     endif()
   endif()
 
-  string(REPLACE ";" "\;"
-                 ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
-                 "${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}")
+  string(REPLACE ";" "\;" ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
+                 "${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}"
+  )
   message(
     DEBUG
     "\$\{ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED\} : ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
   )
 
   if(DEFINED BOOST_USE_MY_BOOST_DIRECTORY)
-    cpmaddpackage(
-      NAME
-      Boost
-      VERSION
-      ${${TRY_BOOST_VERSION}}
-      SOURCE_DIR
-      ${BOOST_USE_MY_BOOST_DIRECTORY}
-      PATCHES
-      ${patches_for_boost}
-      FIND_PACKAGE_ARGUMENTS
-      "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
-      OPTIONS
-      "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}")
+    CPMAddPackage(
+      NAME Boost
+      VERSION ${${TRY_BOOST_VERSION}}
+      SOURCE_DIR ${BOOST_USE_MY_BOOST_DIRECTORY} PATCHES ${patches_for_boost}
+      FIND_PACKAGE_ARGUMENTS "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
+      OPTIONS "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}"
+    )
   elseif(patches_for_boost AND NOT boost_is_old) # is it 1.80.0 < x < 1.84.0
-    cpmaddpackage(
-      NAME
-      Boost
-      VERSION
-      ${${TRY_BOOST_VERSION}}
-      URL
-      ${BOOST_URL}
-      PATCHES
-      ${patches_for_boost}
-      FIND_PACKAGE_ARGUMENTS
-      "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
-      OPTIONS
-      "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}")
+    CPMAddPackage(
+      NAME Boost
+      VERSION ${${TRY_BOOST_VERSION}}
+      URL ${BOOST_URL} PATCHES ${patches_for_boost}
+      FIND_PACKAGE_ARGUMENTS "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
+      OPTIONS "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}"
+    )
   elseif(NOT boost_is_old) # is it 1.85.0+ ?
-    cpmaddpackage(
-      NAME
-      Boost
-      VERSION
-      ${${TRY_BOOST_VERSION}}
-      URL
-      ${BOOST_URL}
-      FIND_PACKAGE_ARGUMENTS
-      "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
-      OPTIONS
-      "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}")
+    CPMAddPackage(
+      NAME Boost
+      VERSION ${${TRY_BOOST_VERSION}}
+      URL ${BOOST_URL}
+      FIND_PACKAGE_ARGUMENTS "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
+      OPTIONS "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}"
+    )
   else() # is it <1.80.0 ?
-    cpmaddpackage(
-      NAME
-      Boost
-      VERSION
-      ${${TRY_BOOST_VERSION}}
-      GIT_REPOSITORY
-      "https://github.com/boostorg/boost"
-      GIT_TAG
-      "boost-${${TRY_BOOST_VERSION}}"
-      PATCHES
-      ${patches_for_boost}
-      FIND_PACKAGE_ARGUMENTS
-      "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
-      OPTIONS
-      "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}")
+    CPMAddPackage(
+      NAME Boost
+      VERSION ${${TRY_BOOST_VERSION}}
+      GIT_REPOSITORY "https://github.com/boostorg/boost"
+      GIT_TAG "boost-${${TRY_BOOST_VERSION}}" PATCHES ${patches_for_boost}
+      FIND_PACKAGE_ARGUMENTS "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
+      OPTIONS "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}"
+    )
   endif()
 
   # set(IS_BOOST_LOCAL OFF) endif()
@@ -164,7 +145,11 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
 
   # Link dependencies
   foreach(target IN LISTS targets_to_link_to)
-    message(DEBUG "Boost_ADDED is defined : ${Boost_ADDED}")
+    if(DEFINED Boost_ADDED)
+      message(DEBUG "Boost_ADDED is defined \$\{Boost_ADDED\}: ${Boost_ADDED}")
+    else()
+      message(DEBUG "Boost_ADDED is not defined.")
+    endif()
     if(NOT DEFINED ADDBOOSTCMAKE_LINK_TYPE)
       get_target_property(type ${target} TYPE)
       if("${type}" STREQUAL "INTERFACE_LIBRARY")
@@ -175,21 +160,19 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
     else()
       set(ADDBOOSTCMAKE_LINK_TYPE_VALUE ${ADDBOOSTCMAKE_LINK_TYPE})
     endif()
-    if(Boost_ADDED STREQUAL "")
+    if(Boost_ADDED STREQUAL "" OR Boost_ADDED STREQUAL "NO")
       target_link_libraries(${target} ${ADDBOOSTCMAKE_LINK_TYPE_VALUE} Boost::boost)
     else()
       foreach(a_lib ${${BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}})
-        target_link_libraries(${target} ${ADDBOOSTCMAKE_LINK_TYPE_VALUE}
-                              Boost::${a_lib})
+        target_link_libraries(${target} ${ADDBOOSTCMAKE_LINK_TYPE_VALUE} Boost::${a_lib})
       endforeach()
     endif()
 
     foreach(a_lib ${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}})
-      target_link_libraries(${target} ${ADDBOOSTCMAKE_LINK_TYPE_VALUE}
-                            Boost::${a_lib})
+      target_link_libraries(${target} ${ADDBOOSTCMAKE_LINK_TYPE_VALUE} Boost::${a_lib})
     endforeach()
   endforeach()
-  if(Boost_ADDED STREQUAL "")
+  if(Boost_ADDED STREQUAL "" OR Boost_ADDED STREQUAL "NO")
     set(ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS
         "Boost ${${TRY_BOOST_VERSION}} REQUIRED ${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}"
     )
@@ -200,16 +183,19 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
     )
     foreach(dep ${BOOST_ALL_DEPENDENCIES})
       string(APPEND ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS
-             "boost_${dep} ${${TRY_BOOST_VERSION}};")
+             "boost_${dep} ${${TRY_BOOST_VERSION}};"
+      )
     endforeach()
     string(LENGTH "${ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS}"
-                  ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH)
+                  ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH
+    )
     math(EXPR ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH
-         "${ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH}-1"
-         OUTPUT_FORMAT DECIMAL)
+         "${ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH}-1" OUTPUT_FORMAT DECIMAL
+    )
     string(SUBSTRING "${ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS}" 0
                      ${ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS_LENGTH}
-                     ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS)
+                     ADDBOOSTCMAKE_PACKAGEPROJECT_INSTALL_TARGETS
+    )
   endif()
 
   message(
