fix `find_package(AddBoost.cmake xy.z.w)`
Now `find_package` should determine the version of AddBoost.cmake as
`xy.z.w`

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ install_dir/
 compile_commands.json
 
 /cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake
+/cmake/AddBoost.cmake/AddBoost.cmakeConfigVersion.cmake
