--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,22 @@ cmake_minimum_required(VERSION 3.14...3.22)
 
 # ---- Project ----
 
-set(AddBoost.cmake_VERSION 3.7)
+set(AddBoost.cmake_VERSION 3.7.1)
 
 option(${PROJECT_NAME}_INSTALL "Install the script at local system?" NO)
 
-configure_file(
-  ${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake.in ${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake
-  @ONLY
+include(CMakePackageConfigHelpers)
+
+include(GNUInstallDirs)
+
+configure_package_config_file(
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake.in
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake
+  INSTALL_DESTINATION ${CMAKE_INSTALL_DATADIR}/cmake/AddBoost.cmake
 )
+
+write_basic_package_version_file(${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfigVersion.cmake VERSION ${AddBoost.cmake_VERSION} COMPATIBILITY AnyNewerVersion ARCH_INDEPENDENT)
+
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake)
 
@@ -25,8 +33,13 @@ if(${AddBoost.cmake_INSTALL})
         "Path to a folder to which install the script AddBoostConfig.cmake . By default: ${CMAKE_INSTALL_DATADIR}/cmake/AddBoost.cmake/"
   )
 
-  install(FILES "${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake" DESTINATION "${CMAKEDIR}")
+  install(FILES "${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake"
+          DESTINATION "${CMAKEDIR}"
+  )
 
-  message(STATUS "Use `find_package(AddBoost.cmake)` to use it")
+  install(FILES "${CMAKE_CURRENT_LIST_DIR}/cmake/AddBoost.cmake/AddBoost.cmakeConfigVersion.cmake"
+          DESTINATION "${CMAKEDIR}"
+  )
+  message(STATUS "Use `find_package(AddBoost.cmake ${AddBoost.cmake_VERSION})` to use it")
 
 endif()
